switch to elysia

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "bun install",
+    "dev": "bun --watch index.ts",
     "start": "bun run index.ts"
   },
   "devDependencies": {
@@ -11,5 +12,8 @@
   },
   "peerDependencies": {
     "typescript": "5.0.0"
+  },
+  "dependencies": {
+    "elysia": "1.1.2"
   }
 }
