--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "5.0.0"
   },
   "dependencies": {
+    "@elysiajs/cors": "1.1.0",
     "dotenv": "16.4.5",
     "elysia": "1.1.2",
     "elysia-rate-limit": "4.1.0",
