--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "bun run index.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/open-graph-scraper": "4.8.5"
   },
   "peerDependencies": {
     "typescript": "5.0.0"
@@ -18,6 +19,7 @@
     "dotenv": "16.4.5",
     "elysia": "1.1.2",
     "elysia-rate-limit": "4.1.0",
-    "mongoose": "8.5.1"
+    "mongoose": "8.5.1",
+    "open-graph-scraper": "6.6.3"
   }
 }
